2003-11-18  Carl Worth  <cworth@east.isi.edu>

	* configure.in: Bump version to 0.1.13 for new freetype header
	compatibility.
	Fix comments regarding freetype version checking.

2003-11-18  James Henstridge  <james@daa.com.au>

	* cairo.pc.in (Cflags): add FREETYPE_CFLAGS/LIBS to Libs/Cflags
	rather than requiring "freetype2", which doesn't exist in anything
	but the most recent version of freetype.

	* configure.in (FREETYPE_LIBS): add freetype cflags/libs
	substitutions.

2003-11-18  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.h: Fix build for new freetype header include
	mechanism, (thanks to Christof Petig <christof@petig-baender.de>)

2003-11-17  Carl Worth  <cworth@isi.edu>

	* Remove infinite looping when stroking with a line width at or
	close to 0.0. Thanks to Rob Buis <buis@kde.org> and Noah Levitt
	<nlevitt@columbia.edu> for providing in-the-wild examples of SVG
	files with stroke-width:0 that demonstrated the problem,
	(cowboy.svg and albania.svg).

	* src/cairo_pen.c (_cairo_pen_stroke_spline): Do nothing if the
	pen is a degenerate, single point. This happens when the line
	width is a very small, non-zero value.

	* src/cairo_gstate.c (_cairo_gstate_stroke): Do nothing when asked
	to stroke a path with a line_width of 0.0. Previously, this would
	lead to an infinite loop.

	* src/cairo.c (cairo_set_line_width): Force negative line width
	to 0.0.

	* TODO: Updated TODO list.

2003-11-10  Carl Worth  <cworth@east.isi.edu>

	* configure.in: Fix typo (thanks to John Ellson
	<ellson@research.att.com>)

	* TODO: Add TODO items for intersection problem, programmatic
	patterns, missing text functions.

2003-11-06  Carl Worth  <cworth@isi.edu>

	* configure.in (CAIRO_VERSION): Bumped version to 0.1.12 for new
	cairo_in_stroke and cairo_in_fill functions.

	* src/cairo.h:
	* src/cairo.c (cairo_in_stroke):
	(cairo_in_fill): Added new cairo_in_stroke and cairo_in_fill.

	* src/cairo_traps.c (_cairo_trap_contains):